# linux_library_nx_video_api

./: Makefile  Makefile.cross  configure.ac  groups  project.config
debian/: changelog  control  nx-video-api.install
include/linux/: videodev2_nxp_media.h
packaging/: nx-video-api.spec
src/: Android.mk  Makefile  Makefile.am  Makefile.cross  nx_video_alloc.c  nx_video_alloc.h  nx_video_alloc_drm.c  nx_video_alloc_ion.cpp  nx_video_api.h  nx_video_dec.c  nx_video_enc.c
src/nx_video_alloc/: nx_video_alloc.c
test/: CodecInfo.cpp  Makefile  Makefile.am  Makefile.cross  MediaExtractor.cpp  MediaExtractor.h  VideoDecTest.cpp  VideoEncTest.cpp  configure.ac  main.cpp
